# docker-package-inspector

./: .gitignore  DIFF_FEATURE.md  EXAMPLES.md  README.md  TESTING.md  example.py  pyproject.toml  requirements.txt  setup.py
docker_package_inspector/: __init__.py  cli.py  inspector.py  package_metadata.py
