[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "docker-package-inspector"
version = "0.3.0"
description = "A CLI tool to inspect Docker images and extract package information"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "docker>=6.0.0",
    "requests>=2.28.0",
]

[project.scripts]
docker-package-inspector = "docker_package_inspector.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/docker-package-inspector"
